force-app/main/default/objects/Adherence_Record__c/Adherence_Record__c.object-meta.xml
<CustomObject>
    <label>Adherence Record</label><pluralLabel>Adherence Records</pluralLabel>
    <nameField><label>Adherence Name</label><type>AutoNumber</type><displayFormat>ADH-{00000}</displayFormat></nameField>
<sharingModel>ControlledByParent</sharingModel>
<enableActivities>true</enableActivities>
</CustomObject>