force-app/main/default/objects/Adherence_Record__c/fields/Adherence_Score__c.field-meta.xml
<CustomField>
    <fullName>Adherence_Score__c</fullName><label>Adherence Score</label><type>Number</type><precision>5</precision><scale>2</scale>
</CustomField>