force-app/main/default/objects/Adherence_Record__c/fields/Discontinuation_Risk__c.field-meta.xml
<CustomField>
    <fullName>Discontinuation_Risk__c</fullName><label>Discontinuation Risk</label><type>Picklist</type>
    <valueSet><valueSetDefinition><sorted>false</sorted>
        <value><fullName>Low</fullName><default>true</default><label>Low</label></value>
        <value><fullName>Medium</fullName><default>false</default><label>Medium</label></value>
        <value><fullName>High</fullName><default>false</default><label>High</label></value>
    </valueSetDefinition></valueSet>
</CustomField>