force-app/main/default/objects/Adherence_Record__c/fields/Drug__c.field-meta.xml
<CustomField>
    <fullName>Drug__c</fullName><label>Drug</label><type>Lookup</type>
    <referenceTo>Drug__c</referenceTo>
    <relationshipName>Adherence_Drug</relationshipName>
    <relationshipLabel>Adherence Records</relationshipLabel>
</CustomField>