force-app/main/default/objects/Adherence_Record__c/fields/Next_Refill_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Refill_Date__c</fullName><label>Next Refill Date</label><type>Date</type>
</CustomField>