force-app/main/default/objects/Adherence_Record__c/fields/Outreach_Required__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Required__c</fullName><label>Outreach Required</label><type>Checkbox</type><defaultValue>false</defaultValue>
</CustomField>