force-app/main/default/objects/Adherence_Record__c/fields/Refill_Gap_Days__c.field-meta.xml
<CustomField>
    <fullName>Refill_Gap_Days__c</fullName><label>Refill Gap Days</label><type>Number</type><precision>5</precision><scale>0</scale>
</CustomField>