force-app/main/default/objects/Adherence_Record__c/fields/Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>Risk_Level__c</fullName><label>Risk Level</label><type>Picklist</type>
    <valueSet><valueSetDefinition><sorted>false</sorted>
        <value><fullName>Green</fullName><default>true</default><label>Green</label></value>
        <value><fullName>Amber</fullName><default>false</default><label>Amber</label></value>
        <value><fullName>Red</fullName><default>false</default><label>Red</label></value>
    </valueSetDefinition></valueSet>
</CustomField>